--- a/test.html
+++ b/test.html
@@ -1,3 +1,4 @@
 <h1>Hey. I am big heading.</h1>
-<p>Hey Im a paragraph element. Cool</p>
+<p>Hey Im a <b>paragraph</b> element. Cool</p>
 <a href="https://google.com" target="-blank" title="Lets go to Google">Claic Me!</a>
+<img src="m4a1.jpeg">
